kubernetes/database_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
        - name: mysql-db
          image: azarel9/softwareforcloud-mysql:0.1
          ports:
            - containerPort: 3306
              name: mysql-db
