kubernetes/server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: azarel9/softwareforcloud-server:0.1
          ports:
            - containerPort: 3000
          env: # Setting Enviornmental Variables
            - name: DB_HOST   # Setting Database host address from configMap
              value: mysql
            - name : DB_NAME
              value: cloud_projet
