kubernetes/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: azarel9/front-app:0.5
          ports:
            - containerPort: 8100
---

apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 8100
      targetPort: 8100
  type: LoadBalancer
