kubernetes/image_processing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imageprocess
  labels:
    app: imageprocess
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imageprocess
  template:
    metadata:
      labels:
        app: imageprocess
    spec:
      containers:
        - name: imageprocess
          image: azarel9/image_process:0.1
          ports:
            - containerPort: 911

---

apiVersion: v1
kind: Service
metadata:
  name: imageprocess
spec:
  selector:
    app: imageprocess
  ports:
    - protocol: TCP
      port: 911
      targetPort: 911
      name: http
  type: NodePort
status:
  loadBalancer: {}

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: imageprocess
spec:
  hosts:
  - "*"
  gateways:
  - microservice-gateway
  http:
  - match:
    - uri:
        prefix: /image/
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 911
        host: imageprocess.default.svc.cluster.local
