kubernetes/recommendations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendations
  template:
    metadata:
      labels:
        app: recommendations
    spec:
      containers:
        - name: recommendations
          image: azarel9/recommendations:0.6
          ports:
            - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: recommendations
spec:
  selector:
    app: recommendations
  ports:
    - protocol: TCP
      port: 8976
      targetPort: 8000
      name: http
  type: NodePort
status:
  loadBalancer: {}

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendations
spec:
  hosts:
  - "*"
  gateways:
  - microservice-gateway
  http:
  - match:
    - uri:
        prefix: /recommendations/
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8976
        host: recommendations.default.svc.cluster.local
